# server/src/http/openapi.rs
@@ -26,12 +26,13 @@ use super::{
         UploadCoverRequest,
     },
     admin::{
-        __path_registration_policy, __path_reset_user_password, __path_storage,
-        __path_system_information, __path_update_registration_policy, __path_update_role,
-        __path_update_status, __path_users, AdminMutationData, AdminMutationEnvelope,
-        AdminPasswordResetRequest, AdminUserData, AdminUserListEnvelope, RegistrationPolicyData,
-        RegistrationPolicyEnvelope, RegistrationPolicyRequest, StorageData, StorageEnvelope,
-        SystemInformationData, SystemInformationEnvelope, UserRoleRequest, UserStatusRequest,
+        __path_delete_user_account, __path_registration_policy, __path_reset_user_password,
+        __path_storage, __path_system_information, __path_update_registration_policy,
+        __path_update_role, __path_update_status, __path_users, AdminMutationData,
+        AdminMutationEnvelope, AdminPasswordResetRequest, AdminUserData, AdminUserListEnvelope,
+        RegistrationPolicyData, RegistrationPolicyEnvelope, RegistrationPolicyRequest, StorageData,
+        StorageEnvelope, SystemInformationData, SystemInformationEnvelope, UserRoleRequest,
+        UserStatusRequest,
     },
     ai_expense::{
         __path_capabilities as __path_ai_capabilities,
@@ -142,6 +143,7 @@ use super::{
         download_avatar_image,
         update_profile,
         users,
+        delete_user_account,
         update_status,
         update_role,
         reset_user_password,
